# mosinOS

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  bjou  build.sh  fs.hex  make.bjou  make_e31.bjou  mosin.nm  mosin_os.elf  out.S  out.txt  start.lds  temp.out  temp.txt  test.gdb  test.sh
asm/: disable_pmp.S  ecall.S  ecall_wrapper.S  enable_interrupts.S  fence.S  fs.S  mmode_switch.S  semaphore_dec.S  semaphore_inc.S  start.S  trap.S  umode_switch.S  wfi.S
lds/: e31.lds  hifive.lds  q_e31.lds  qemu.lds  start.lds
src/: PCB.bjou  __slice.bjou  abort.bjou  ansi_escapes.bjou  asm.bjou  asm_call.bjou  brkpt.bjou  clint.bjou  compiler_support.bjou  component_result.bjou  console.bjou  console.rs  cstr.bjou  defs.bjou  error.bjou  heap.bjou  lib.rs  machine_info.bjou  machine_info.rs  mem.bjou  mosin_os.bjou  none.bjou  pcb.bjou  random.bjou  rbtree.bjou  sched.bjou  stackvec.rs  static.bjou  syscall.bjou  trap.bjou  trap.rs  uart.bjou  uart.rs  util.bjou
src/atomics/: barrier.bjou  barrier.rs  locks.bjou  locks.rs  mod.rs
src/console/: mod.rs  uart.rs
src/drivers/: uart.rs
src/fs/: ext2.bjou  ext2.rs
src/libs/: mod.rs  syscalls.rs
src/mem/: heap.rs  mod.rs  pmp.rs
src/processes/: a.bjou  b.bjou  c.bjou  calc.bjou  cat.bjou  cd.bjou  echo.bjou  forkbomb.bjou  fsinfo.bjou  game.bjou  init.bjou  kill.bjou  loop.bjou  ls.bjou  mkproc.bjou  sh.bjou  sleep.bjou  snake.bjou  status.bjou  top.bjou
src/scheduler/: mod.rs
src/syscalls/: mod.rs
src/utils/: mod.rs  rbtree.rs
