[package]
name = "mosin_os"
version = "0.1.0"
authors = ["Ben Olson, Joe Teague, Chad Effler, Brandon Kammerdiener <{molson5, jteague6, teffler, bkammerd}@vols.utk.edu>"]
edition = "2018"

[profile.dev]
lto = false
panic = "abort"

[profile.release]
lto = true
panic = "unwind"

[dependencies]

[lib]
crate-type = ["staticlib"]

[features]
e31 = []
qemu = []
